hooked up map to migrants data

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,3 +4,9 @@
     align-items: center;
     height: 100%;
   }
+
+  .pre {
+    font-size: 2rem;
+    text-align: center;
+    margin: 50vh 0;
+  }
