--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,24 @@
   .charts {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
+    margin-left: 16em;
+    margin-right: 16em;
   }
 
   .pre {
     font-size: 2rem;
     text-align: center;
     margin: 50vh 0;
+  }
+
+  .header {
+    margin-bottom: 1rem;
+  }
+
+  .heading {
+    text-align: center;
+    font-size: 1.5rem;
   }
