--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-left: 16em;
-    margin-right: 16em;
+    margin-left: 2em;
+    margin-right: 2em;
   }
 
   .pre {
@@ -16,9 +16,11 @@
 
   .header {
     margin-bottom: 1rem;
+    max-width: 960px;
   }
 
   .heading {
     text-align: center;
     font-size: 1.5rem;
+    margin-bottom: 1.5rem;
   }
