--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,10 +17,13 @@
   .header {
     margin-bottom: 1rem;
     max-width: 960px;
+    line-height: 1.5rem;
+    text-align: justify;
+    text-justify: inter-word
   }
 
   .heading {
     text-align: center;
-    font-size: 1.5rem;
-    margin-bottom: 1.5rem;
+    font-size: 1.75rem;
+    margin-bottom: 3rem;
   }
